openwebrx (1.2.58) bullseye jammy; urgency=low

  * Added MQTT reporting of SDR profile and status changes.
  * SDR changes reported via "openwebrx/RX" MQTT topic.
  * Decodes reported via "openwebrx/<mode>" MQTT topics.  
  * Switched PAGE decoders to millisecond timestamps.
  * Switched PAGE and ISM file recording to JSON.
  * Separated FLEX baud rate from channel number.
  * Made relevant PAGE JSON fields integer.
  * Cleaned up TextParser, PAGE, and ISM decoders.
  * Fixed Selector API errors when withSquelch=False.

 -- Marat Fayzullin <luarvique@gmail.com>  Mon, 6 May 2024 16:12:00 +0000

openwebrx (1.2.57) bullseye jammy; urgency=low

  * Added user-selectable waterfall color themes.
  * Added initial data to all aircraft MQTT reports.
  * Added current frequency to all reported JSON data.
  * Stopped adding secondary offset if there is no selector.
  * Switched all JSON timestamps to milliseconds.
  * Moved waterfall functions outside openwebrx.js.
  * Moved UI and utility functions outside openwebrx.js.
  * Refactored aircraft mode parsers.

 -- Marat Fayzullin <luarvique@gmail.com>  Mon, 29 Apr 2024 16:12:00 +0000

openwebrx (1.2.56) bullseye jammy; urgency=low

  * Added character set setting for the pager messages.
  * Added more default profiles to a new SDRPlay device.
  * Added bookmarks for MURS frequencies.
  * Fixed HTML formatting issue in the Feature Report.
  * Fixed exception trying to report filtered pager messages.
  * Moved Multimon, DumpHFDL, DumpVDL2 decoders to ExecModule.
  * Made receiver location available to plugins via Utils.js.
  * Updated remaining Feature Report instructions.
  * Swapped opacity and theme chooser icons.

 -- Marat Fayzullin <luarvique@gmail.com>  Mon, 22 Apr 2024 16:12:00 +0000

openwebrx (1.2.55) bullseye jammy; urgency=low

  * Refactored and greatly improved CW decoder.
  * Added NAVTEX decoder and background service.
  * Added LW/MW band and NAVTEX frequencies to the bandplan.