@@ -3,12 +3,14 @@ openwebrx (1.2.58) bullseye jammy; urgency=low
   * Added MQTT reporting of SDR profile and status changes.
   * SDR changes reported via "openwebrx/RX" MQTT topic.
   * Decodes reported via "openwebrx/<mode>" MQTT topics.  
+  * Fixed background PAGE decoding with a workaround.
+  * Fixed Selector API errors when withSquelch=False.
   * Switched PAGE decoders to millisecond timestamps.
   * Switched PAGE and ISM file recording to JSON.
   * Separated FLEX baud rate from channel number.
   * Made relevant PAGE JSON fields integer.
   * Cleaned up TextParser, PAGE, and ISM decoders.
-  * Fixed Selector API errors when withSquelch=False.
+  * Added debug code to print module chains.
 
  -- Marat Fayzullin <luarvique@gmail.com>  Mon, 6 May 2024 16:12:00 +0000
 
